--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="sidebar-template"></div>
 
     <!-- Main Content -->
-    <main class="main-content" style="flex: 1; padding: 2rem;">
+    <main class="main-content" style="flex: 1; padding: 2rem; min-width: 0; width: 100%; overflow-x: hidden;">
       <!-- Hero Section -->
       <!-- <section class="hero" style="padding: 0; margin-bottom: 3rem;">
         <div class="container">
@@ -151,6 +151,9 @@
     </main>
   </div>
 
+  <!-- Go to Top Button -->
+  <button class="go-to-top" id="goToTop" title="Go to top">↑</button>
+
   <!-- Footer Template -->
   <div id="footer-template"></div>
 
@@ -203,6 +206,33 @@
           this.style.background = 'rgba(255,255,255,0.1)';
           this.style.transform = 'translateY(0px)';
         });
+      });
+    });
+
+    // Go to Top Button Functionality
+    const goToTopBtn = document.getElementById('goToTop');
+    
+    // Show/hide button based on scroll position
+    window.addEventListener('scroll', () => {
+      if (window.pageYOffset > 300) {
+        goToTopBtn.classList.add('show');
+        goToTopBtn.classList.remove('hide');
+      } else {
+        goToTopBtn.classList.add('hide');
+        goToTopBtn.classList.remove('show');
+        setTimeout(() => {
+          if (!goToTopBtn.classList.contains('show')) {
+            goToTopBtn.style.display = 'none';
+          }
+        }, 300);
+      }
+    });
+    
+    // Smooth scroll to top when clicked
+    goToTopBtn.addEventListener('click', () => {
+      window.scrollTo({
+        top: 0,
+        behavior: 'smooth'
       });
     });
   </script>
