added new members in team page

--- a/team.html
+++ b/team.html
@@ -273,6 +273,16 @@
             </thead>
             <tbody>
               <!-- Student data from students_list.csv -->
+                <tr>
+                <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #ddd;">Rohit Kumar</td>
+                <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #ddd;">MCA</td>
+                <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #ddd;">2nd Year</td>
+              </tr>
+               <tr>
+                <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #ddd;">Utkarsh Rajput</td>
+                <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #ddd;">MCA</td>
+                <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #ddd;">2nd Year</td>
+              </tr>
               <tr>
                 <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #ddd;">Sourabh Bhikan Anuse</td>
                 <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #ddd;">CIVIL</td>
